# eqt-baublock-chat-core

./: Dockerfile  README.md  app.py  azure-pipelines.yml  chainlit.md  pyproject.toml
public/: stylesheet_back.css
